--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
+    <string name="action_setting">Setting</string>
+    <string name="crime_title_hint">Enter a title for the crime</string>
 </resources>
